[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
jsonpath-rust = "0.7.0"
libfuzzer-sys = "0.4.7"
serde_json_bytes = { path = "..", features = ["preserve_order"] }
serde_json = { version = "1.0.117", features = ["preserve_order"] }
lazy_static = "1.4.0"
 
[[bin]]
name = "path"
path = "fuzz_targets/path.rs"
test = false
doc = false
